--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   get: ^4.6.5
   cloud_firestore: ^4.3.1
+  google_fonts: ^4.0.3
+  firebase_storage: ^11.0.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
